# llvm-project

.github/workflows/: libsycl-build-and-test.yaml
bolt/test/binary-analysis/AArch64/: gs-pauth-debug-output.s
libsycl/: CMakeLists.txt
libsycl/cmake/Modules/: FetchUnifiedRuntime.cmake
libsycl/docs/: index.rst
libsycl/include/sycl/__impl/: backend.hpp  exception.hpp  platform.hpp
libsycl/include/sycl/__impl/detail/: impl_utils.hpp  macro_definitions.hpp  spinlock.hpp
libsycl/include/sycl/__impl/info/: platform.def  platform.hpp  platform_deprecated_2020.def
libsycl/src/: CMakeLists.txt  exception.cpp  exception_list.cpp  platform.cpp
libsycl/src/detail/: global_handler.cpp  global_handler.hpp  platform_impl.cpp  platform_impl.hpp
libsycl/src/detail/offload/: info_code.hpp  offload_topology.cpp  offload_topology.hpp  offload_utils.cpp  offload_utils.hpp
libsycl/src/detail/ur/: adapter_impl.cpp  adapter_impl.hpp  ur.hpp
libsycl/test-e2e/: CMakeLists.txt  format.py  lit.cfg.py  lit.site.cfg.py.in
libsycl/test-e2e/platform/: platform.cpp
libsycl/tools/: CMakeLists.txt
libsycl/tools/sycl-ls/: CMakeLists.txt  sycl-ls.cpp
llvm/include/llvm/IR/: RuntimeLibcalls.h
llvm/lib/IR/: RuntimeLibcalls.cpp
llvm/lib/Transforms/Scalar/: TailRecursionElimination.cpp
llvm/test/CodeGen/AArch64/: aarch64-combine-split-loads.mir
llvm/test/Transforms/TailCallElim/: entry-count-adjustment.ll
